k8s/postgres-healess-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ha-platform
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
