k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: ha-platform
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
